# tarzan

./: .coveragerc  .env  .flake8  .pylint.rc  Dockerfile  Make.ps1  Makefile  README.md  docker-compose.yml  echosystem.config.json  manage.py  pyproject.toml  pytest.ini
.github/workflows/: codacy.yml  pylint.yml  test.yml
roadmaps/1_core/: authentication.md  internationalization.md  logging.md  security.md
roadmaps/2_frontend/: js_framework.md  static.md  templates.md
roadmaps/3_API/: authentication.md  endpoints.md
roadmaps/4_testing/: CI.md  tests.md
roadmaps/5_extensions/: cache.md  celery.md  management.md  middleware.md  signals.md  toolbar.md
roadmaps/6_deployment/: docker.md  load_balancer.md  scripts.md  server_config.md
roadmaps/7_monitoring/: analytics.md  error.md  performance.md
roadmaps/8_documentation/: codestyle.md  comments.md  project.md
scripts/: django-deploy.sh  django-utils.sh  docker-utils.sh  linux-utils.sh
setup/: asgi.py  exceptions.py  settings.py  swagger.py  urls.py  wsgi.py
src/: apps.py  celery.py  forms.py  middleware.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
src/management/commands/: migrate_periodic.py
src/migrations/: 0001_initial.py  sample_posts.json
src/templates/src/: base.html  index.html  login.html  logout.html  profile.html  signup.html
static/css/: styles.css
static/images/: tarzan_big  tarzan_small  tarzan_tiny
staticfiles/images/: tarzan_huge  tarzan_normal
tests/: conftest.py  factories.py  fixtures.py  test_apps.py  test_forms.py  test_middleware.py  test_models.py  test_utils.py  test_views.py
