[tool.poetry]
name = "tarzan"
version = "0.0.0"
description = "Tarzan, the Django explorer"
authors = ["Bruno Peixoto <brunolnetto@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.ruff]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E", "F", "Q"]

# Never enforce `E501` (line length violations).
ignore = ["E501"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]

# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

# Same as Black.
line-length = 100

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.8
target-version = "py38"

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

# Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]
"path/to/file.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.poetry.dependencies]
python = "^3.8"
psycopg2-binary = "^2.9.7"
django-rest-swagger = "^2.2.0"
djangorestframework = "^3.14.0"
python-decouple = "^3.8"
drf-yasg = "^1.21.7"
django = "^4.2.7"
pytest = "^7.4.1"
pytest-django = "^4.5.2"
coverage = "^7.3.0"
ruff = "^0.0.289"
autopep8 = "^2.0.4"
mypy = "^1.5.1"
pylint-django = "^2.5.3"
factory-boy = "^3.3.0"
django-extensions = "^3.2.3"
black = "^23.9.1"
pylint = "^2.17.5"
pytest-testmon = "^2.0.13"
ptw = "^1.0.1"
nose2 = "^0.14.0"
pytest-cov = "^4.1.0"
pytest-watcher = "^0.3.4"
celery = "^5.3.4"
redis = "^5.0.1"
flower = "^2.0.1"
django-debug-toolbar = "^4.2.0"
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
